--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>与老婆的聊天日记</title>
+    <title>与老婆的聊天报告</title>
     <link rel="stylesheet" href="https://memotrace.cn/static/css/style.css">sa
     <script type="text/javascript" src="https://memotrace.cn/js/echarts.min.js"></script>
     <script type="text/javascript" src="https://memotrace.cn/js/echarts-wordcloud.min.js"></script>
