--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
                 </div>
             </div>
             <div>
-                <p class="mt-3">老婆和我相爱在</p>
-                <p id="first_time" class="first-time">2024-06-01 23:59:59</p>
+                <p class="mt-3">老婆和我“第一次”聊天在</p>
+                <p id="first_time" class="first-time">2024-04-17 23:34:53</p>
                 <p class="mt-3">距今已有</p>
                 <div class="mt-3">
                     <span id="t_d"></span>
